--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <img src="./img/main-banner.png" alt="메인 배너 이미지">
                 </div>
                 <div class="m-text-box">
-                    <h1>Discover Yout New Home</h1>
+                    <h1>Discover Your New Home</h1>
                     <p>Helping 100 million renters find their perfect fit.</p>
                     <ul class="banner-nav">
                         <li><a href="#">Buy</a></li>
