--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
             <img src="./img/s-banner.png" alt="소배너">
         </div>
         <div class="footer-logo-box">
-            <a href="#"><img src="/img/logo.png" alt="로고"></a>
+            <a href="#"><img src="./img/logo.png" alt="로고"></a>
         </div>
         <ul class="footer-list-wrap">
             <ul>
